--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="description_hint">Description</string>
     <string name="save_menu">save</string>
     <string name="delete_deal">Delete Deal</string>
+    <string name="logout">logout</string>
 </resources>
